tests/type-error/classes/MissingInstanceMethods.vix
class Test a where
  f : a
  g : a

instance Test int where
  f = 1
